# Hackathon_Project

./: Dockerfile  README.md  __init__.py  app (2).py  client.py  inference (2).py  models.py  openenv.yaml  pyproject.toml  requirements (1).txt  task_definitions.py
server/: environment.py
