[project]
name = "incident-response-detective"
version = "1.0.0"
description = "OpenEnv RL environment for incident triage with conflicting signals"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "requests>=2.32.0",
    "openai>=1.51.0",
]
